add simple style in head

--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <html>
     <head>
         <title>Pauli's Hub</title>
+        <style>
+            * {
+                margin: 0 auto;
+            }
+            b {
+                color: #232343;
+            }
+            span {
+                color: #454344;
+            }
+            h2 {
+                color: #121223;
+            }
+            h4 {
+                color: #232425;
+            }
+        </style>
     </head>
     <body>
-        <h2>Hello</h2>
+        <h2>Pauli's Hub</h2>
+        <h4>Projects</h4>
+        <ul>
+            <li><b>KNOCK</b> <span>Manage and view shop status</span></li>
+            <li><b>BALANSCALE</b> <span>Simplified Health Checkup for remote places</span></li>
+            <li><b>RemoteControl</b><span>Check and control remote switches</span></li>
+            <li><b>BeautyDocent</b><span>Korean Beauty and Education Association WebSite</span></li>
+        </ul>
     </body>
 </html>
