--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Pauli's Hub</title>
         <style>
-            * {
+            body {
                 margin: 0 auto;
             }
             b {
@@ -20,13 +20,15 @@
         </style>
     </head>
     <body>
+        <div>
         <h2>Pauli's Hub</h2>
         <h4>Projects</h4>
-        <ul>
-            <li><b>KNOCK</b> <span>Manage and view shop status</span></li>
-            <li><b>BALANSCALE</b> <span>Simplified Health Checkup for remote places</span></li>
-            <li><b>RemoteControl</b><span>Check and control remote switches</span></li>
-            <li><b>BeautyDocent</b><span>Korean Beauty and Education Association WebSite</span></li>
-        </ul>
+            <ul>
+                <li><b>KNOCK</b> <span>Manage and view shop status</span></li>
+                <li><b>BALANSCALE</b> <span>Simplified Health Checkup for remote places</span></li>
+                <li><b>RemoteControl</b><span>Check and control remote switches</span></li>
+                <li><b>BeautyDocent</b><span>Korean Beauty and Education Association WebSite</span></li>
+            </ul>
+        </div>
     </body>
 </html>
